--- a/assets/sass/_responsive.scss
+++ b/assets/sass/_responsive.scss
@@ -3,6 +3,10 @@
     width: 30px;
     height: 30px;
   }
+  .icons-author a .icon {
+    width: 18px;
+    height: 18px;
+  }
   .header-site .site-title {
     margin-bottom: 0;
     font-size: 6.25rem;
