--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,7 +12,7 @@
 
   <meta name="title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
   <meta name="keywords"
-    content="{{ site.name }}, {{ site.username }}, {{ site.title }}{% if page.keywords %}, {{ page.keywords }}{% endif %}" />
+    content="{{ site.name }}, {{ site.username }}, {{ site.title }}{% if page.keywords %}, {{ page.keywords | join: ', ' | escape }}{% endif %}" />
   <meta name="description"
     content="{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
