--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: compress
       <article role="article" id="content" class="post-content" itemprop="articleBody">
         {{ content }}
       </article>
-      {% include share.html %}
+      <!-- {% include share.html %} -->
       {% include author.html %}
       <!-- {% include comments.html %} -->
       {% include footer.html %}
