--- a/assets/sass/_icons.scss
+++ b/assets/sass/_icons.scss
@@ -22,6 +22,30 @@
   }
 }
 
+.icons-author {
+  // text-align: center;
+  a {
+    display: inline-block;
+    padding: .600rem;
+    margin: .125rem;
+    border-radius: 50%;
+    border: .125rem solid $sec;
+    line-height: 0;
+    transition: all .7s;
+    .icon {
+      // fill: $sec;
+      width: 18px;
+      height: 18px;
+    }
+    &:hover {
+      background: $sec;
+      .icon {
+        fill: $main;
+      }
+    }
+  }
+}
+
 .down {
   position: absolute;
   bottom: 50px;
