--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,10 +1,10 @@
-<h2 style="text-align: center">Comments</h2>
+<h2 style="text-align: center">Комментарии</h2>
 <div class="comment-wrapper">
   <section class="comments">
     <div id="disqus_thread"></div>
   </section>
 </div>
-<script type="text/javascript">
+<!-- <script type="text/javascript">
   var disqus_loaded = false;
 
   function load_disqus(){
@@ -23,4 +23,4 @@
       load_disqus()
     }
   };
-</script>
+</script> -->
