--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: compress
       <article role="article" id="content" class="post-content" itemprop="articleBody">
         {{ content }}
       </article>
+      {% include comments_1.html element=".post-content" %}
       <!-- {% include share.html %} -->
       {% include author.html %}
       <!-- {% include comments.html %} -->
