--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -14,7 +14,7 @@
     margin: 1.875rem auto;
     display: block;
   }
-  p, h1, h2, h3, h4, h5, h6, ul, ol, .tags, iframe {
+  p, h1, h2, h3, h4, h5, h6, ul, ol, .tags, iframe, #comments {
     *zoom: 1;
     width: auto;
     max-width: 50rem;
