new post + github issues viewer (#3)
* post draft added

* Comments from github issue were added to post

* post fixed

---------

Co-authored-by: AMukhin <amukhin@it-one.ru>

--- a/assets/sass/_post.scss
+++ b/assets/sass/_post.scss
@@ -14,7 +14,7 @@
     margin: 1.875rem auto;
     display: block;
   }
-  p, h1, h2, h3, h4, h5, h6, ul, ol, .tags, iframe {
+  p, h1, h2, h3, h4, h5, h6, ul, ol, .tags, iframe, #comments {
     *zoom: 1;
     width: auto;
     max-width: 50rem;
@@ -45,9 +45,10 @@
     color: $colorcode;
   }
   a {
-    @extend .main-font;
+    // @extend .main-font;
+    @extend .content-font;
     color: $main;
-    border-bottom: 2px solid $main;
+    border-bottom: 1px dotted $main;
   }
   iframe {
     margin-top: 1.875rem;
