--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <!-- <meta http-equiv="Expires" content="-1" /> -->
 
   <meta name="title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
+  <meta name="google-site-verification" content="bmQrrFxpXH3L_32AbpzU6Obuk1U319Itmef0Ros6ty0" />
   <meta name="keywords"
     content="{{ site.name }}, {{ site.username }}, {{ site.title }}{% if page.keywords %}, {{ page.keywords | join: ', ' | escape }}{% endif %}" />
   <meta name="description"
